# Sandbox-RL

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
configs/: agent-loop.yaml
deploy/sandbox/: Dockerfile
deploy/tke/: namespace.yaml  runtime-secret.env.example  secrets.example.yaml  settings.yaml  vllm.yaml
deploy/training/: Dockerfile  run_train.sh
deploy/training/patches/: verl-fsdp-lora-hf-checkpoint.py  verl-vllm-wake-memory.py  vllm-v1-ban-hole-tokens.py
src/swe_rl/: __init__.py  cli.py  config.py  doctor.py  report.py  schema.py
src/swe_rl/agent/: __init__.py  policy.py  protocol.py  trajectory.py
src/swe_rl/data/: __init__.py  filter_instances.py  prepare.py
src/swe_rl/eval/: __init__.py  runner.py
src/swe_rl/ops/: __init__.py  cos_sync.py  export_checkpoint.py
src/swe_rl/sandbox/: __init__.py  ags.py  bootstrap.py
src/swe_rl/storage/: cos.py  layout.py
src/swe_rl/verl/: __init__.py  agent_loop.py  token_safety.py
tests/: test_agent_policy.py  test_ags.py  test_contracts.py  test_data.py  test_manifests.py  test_protocol.py  test_report.py  test_token_safety.py  test_trajectory.py
