[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swe-rl"
version = "2.0.0"
description = "On-policy SWE repair RL with Tencent Agent Sandbox and VERL on TKE"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
  "PyYAML>=6.0,<7",
  "datasets>=2.20,<5",
  "pyarrow>=15,<24",
  "e2b-code-interpreter>=1.5.1,<2",
  "openai>=1.40,<3",
  "swebench>=4.1,<5",
  "cos-python-sdk-v5>=1.9.30,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "ruff>=0.9,<1"]
model = ["modelscope==1.38.1"]
report = ["matplotlib>=3.8,<4"]

[project.scripts]
swe-rl = "swe_rl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
